@@ -256,7 +256,7 @@ final class ActionUpdater {
           elapsedReport(myCurEDTPerformMillis, true, operationName) + OLD_EDT_MSG_SUFFIX, null, action.getClass());
         FList<Throwable> edtTraces = edtTracesRef.get();
         // do not report pauses without EDT traces (e.g. due to debugging)
-        if (edtTraces != null && edtTraces.size() > 0) {
+        if (edtTraces != null && edtTraces.size() > 0 && edtTraces.get(0).getStackTrace().length > 0) {
           for (Throwable trace : edtTraces) {
             throwable.addSuppressed(trace);
           }
@@ -596,7 +596,7 @@ final class ActionUpdater {
     }
 
     if (!hasEnabled && hideDisabled || !hasVisible && hideEmpty) {
-      return Collections.emptyList();
+      return canBePerformed ? List.of(group) : Collections.emptyList();
     }
     else if (isPopup) {
       return Collections.singletonList(!hideDisabledBase || child instanceof CompactActionGroup ? group :
